<resources>
    <string name="app_name">Healthy</string>
    <string name="user_email">User e-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="new_register">Register new account</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="calculate">Calculate</string>
    <string name="back">Back</string>
    <string name="addweight">Add weight</string>
    <string name="save">save</string>
    <string name="dateofweigh">Date of weigh</string>
    <string name="addsleep">Add sleep</string>
    <string name="date">Date</string>
    <string name="sleeptime">Sleep time</string>
    <string name="wakeuptime">Wake up time</string>
</resources>
