<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp">

    <Button
        android:id="@+id/sleep_form_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <EditText
        android:id="@+id/sleep_form_date"
        android:focusable="false"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:hint="@string/date"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/sleep_form_sleep_time"
        android:focusable="false"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:hint="@string/sleeptime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/sleep_form_wakeup_time"
        android:focusable="false"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:hint="@string/wakeuptime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sleep_form_save_btn"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>