<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="35dp">

    <EditText
        android:drawableLeft="@drawable/ic_height"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:hint="@string/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:drawableLeft="@drawable/ic_weight"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:hint="@string/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

</LinearLayout>