<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="35dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/exercise"
                    android:layout_gravity="center"/>

                <EditText
                    android:drawableLeft="@drawable/ic_username"
                    android:layout_marginTop="15dp"
                    android:hint="@string/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_password"
                    android:layout_marginTop="15dp"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/register"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/new_register" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>